<resources>
    <string name="app_name">JustGo</string>

    <!-- ++++++++++++++++++++++++++ Leejjin ++++++++++++++++++++++++++ -->
    <string name="treview">리뷰 수</string>
    <string name="tprice">가격</string>
    <string name="tstar">별점</string>
    <string name="tname">이름</string>
    <string name="deletebtn">deleteBtn</string>
    <string name="addbtn">addBtn</string>

    <!-- ++++++++++++++++++++++++++ Dwannie ++++++++++++++++++++++++++ -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">여행기록</string>
    <string name="menu_slideshow">가계부</string>
    <string name="menu_tools">설정</string>
    <string name="title_activity_menu_bar">menu_bar</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
